--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 @import url("header.css");
 @import url("apresentacao.css");
+@import url("numeros.css");
 :root{
     --preto-basico: #3A404E;
     --preto-basicov2: #101828;
