--- a/styles/formulario.css
+++ b/styles/formulario.css
@@ -56,7 +56,7 @@
     width: 360px;
     height: 48px;
     border-radius: 8px;
-    border: 1px;
+    border: 1px solid;
     padding: 12px, 14px, 12px, 16px;
     display: flex;
     align-items: center;
